Closed Bug 1342217 Opened 7 years ago Closed 7 years ago

Crash in mozilla::MediaDataDecoderProxy::ConfigurationChanged

Categories

(Core :: Audio/Video: Playback, defect)

52 Branch
Unspecified
Android
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox52 --- unaffected
firefox53 --- unaffected
firefox54 --- fixed

People

(Reporter: calixte, Assigned: jya)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-6a96375e-5c83-4ebe-9078-2d4472170222.
=============================================================

There are 2 crashes [1] & [2] (with same install time) in nightly 54 with buildid 20170221110238. In analyzing the backtrace, they may have been introduced by patch [3] to fix bug 1339748.

[1] https://crash-stats.mozilla.com/report/index/6a96375e-5c83-4ebe-9078-2d4472170222
[2] https://crash-stats.mozilla.com/report/index/c12894e4-4cbc-4b1c-9ece-c1c462170222
[3] https://hg.mozilla.org/mozilla-central/rev?node=e6fa8ff0d0be1dc2808fb8868793ef226412bb91
Flags: needinfo?(jyavenard)
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Comment on attachment 8840834 [details]
Bug 1342217: Add missing return.

https://reviewboard.mozilla.org/r/115272/#review116694
Attachment #8840834 - Flags: review+
https://hg.mozilla.org/mozilla-central/rev/0c92140b5346
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment on attachment 8840834 [details]
Bug 1342217: Add missing return.

https://reviewboard.mozilla.org/r/115272/#review117346

r=no_longer_pending.
Attachment #8840834 - Flags: review?(cpearce) → review+
Whiteboard: [clouseau]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: