Bug 1342217: Add missing return. r=jya

MozReview-Commit-ID: BztaoEGBD3O